@@ -3,6 +3,7 @@
 * New Features
 
   * Builder changes scope based on block arity
+  * Nokogiri::XML::Node#<=> compares nodes based on Document position
 
 === HEAD
 
